--- a/src/styles/command.scss
+++ b/src/styles/command.scss
@@ -1,3 +1,18 @@
 .position-relative {
   position: relative;
 }
+
+.white {
+  color: white;
+}
+
+.d-flex {
+  display: flex;
+}
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.align-items-center {
+  align-items: center;
+}
