--- a/src/styles/attack.scss
+++ b/src/styles/attack.scss
@@ -1,7 +1,37 @@
-$--clr: #1e9bff;
+$--color-black: #111;
+
+.countdown {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 4;
+  width: 100%;
+  height: 100vh;
+  @include flex-center-block;
+  background-color: rgba(black, 0.4);
+  & > h1 {
+    font-size: 10rem;
+    font-family: 'Poppins';
+  }
+}
+
+.count {
+  position: absolute;
+  font-size: 10rem;
+  color: rgba(white, 0);
+  z-index: 5;
+  font-family: 'Poppins';
+  &.animation {
+    animation: countAnim 1s ease-in-out;
+  }
+}
+
 .game {
   @include parallax-bg('../assets/img/game-bg.jpg');
   &__bg-dark {
+    overflow: hidden;
     flex-direction: column;
     @include flex-center-block;
     width: 100%;
@@ -47,13 +77,16 @@ $--clr: #1e9bff;
     z-index: 2;
     width: 50%;
     padding: 30px;
-    background-color: rgba(white, 0.4);
+    background: rgba(white, 0.7);
     border-radius: 20px;
     @include flex-center-block;
     flex-direction: column;
     justify-content: flex-start;
     box-shadow: 0px 0px 10px 0px black;
     transition: all 0.4s ease-in-out;
+    @media (max-width: 792px) {
+      width: 100%;
+    }
     &:hover {
       box-shadow: 0px 0px 25px 0px white;
     }
@@ -126,78 +159,52 @@ $--clr: #1e9bff;
     //  *** end timer styles ***
 
     &__stop {
-      margin-top: 50px;
+      cursor: pointer;
+      border: 1px solid $--color-black;
+      background: none;
+      padding: 10px 20px;
+      font-size: 20px;
+      font-family: 'Poppins';
+      margin: 10px;
+      transition: 0.8s;
       position: relative;
-      background: #444;
-      color: white;
-      text-transform: uppercase;
-      font-size: 1.5em;
-      letter-spacing: 0.1em;
-      padding: 10px 30px;
-      transition: 0.5s;
-      color: $--clr;
-      background: $--clr;
-      box-shadow: 0 0 35px $--clr;
+      overflow: hidden;
+      color: $--color-black;
+
       &:hover {
-        letter-spacing: 0.25em;
+        color: #fff;
       }
 
       &::before {
         content: '';
         position: absolute;
-        inset: 2px;
-        background: #27282c;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 0%;
+        background: $--color-black;
+        z-index: -1;
+        transition: 0.8s;
+        border-radius: 0 0 50% 50%;
       }
-      & > span {
-        position: relative;
-        z-index: 1;
-      }
-      & > b {
-        position: absolute;
-        inset: 0;
-        display: block;
-        &::before {
-          content: '';
-          position: absolute;
-          top: -3.5px;
-          left: 80%;
-          height: 4px;
-          width: 15px;
-          border: 2px solid $--clr;
-          background-color: #27282c;
-          transform: translateX(-50%);
-          transition: 0.5s;
-        }
-        &::after {
-          content: '';
-          position: absolute;
-          bottom: -3.5px;
-          left: 20%;
-          height: 4px;
-          width: 15px;
-          border: 2px solid $--clr;
-          background-color: #27282c;
-          transform: translateX(-50%);
-          transition: 0.5s;
-        }
-      }
-      &:hover b::before {
-        width: 25px;
-        left: 20%;
-      }
-      &:hover b::after {
-        width: 22px;
-        left: 80%;
+      &:hover::before {
+        height: 180%;
       }
     }
 
     &__task {
       @include flex-center-block;
-      // background-color: red;
       justify-content: space-evenly;
+      align-self: center;
+      // background-color: red;
       width: 100%;
       font-size: 6rem;
       margin-top: 40px;
+      text-align: center;
+      &.animation {
+        animation: task 1s ease-in-out;
+      }
+
       &--numbers {
         font-family: 'Number';
         font-size: 6rem;
@@ -238,7 +245,8 @@ $--clr: #1e9bff;
       }
     }
     &__score {
-      margin-top: 40px;
+      margin-top: 80px;
+      margin-bottom: 20px;
       font-size: 1rem;
       & > span {
         margin-left: 10px;
@@ -247,6 +255,16 @@ $--clr: #1e9bff;
   }
 }
 
+@keyframes countAnim {
+  from {
+    opacity: 1;
+    color: rgba(white, 0.7);
+  }
+  to {
+    opacity: 0;
+    color: rgba(white, 0.2);
+  }
+}
 @keyframes blocks {
   0%,
   100% {
@@ -254,5 +272,24 @@ $--clr: #1e9bff;
   }
   50% {
     transform: translateY(-20px);
+  }
+}
+@keyframes task {
+  from {
+    opacity: 0.1;
+    transform: translateX(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes wave {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 118px;
   }
 }
