--- a/src/styles/attack.scss
+++ b/src/styles/attack.scss
@@ -1,4 +1,6 @@
 $--color-black: #111;
+$green: #2ecc71;
+$turquoise: #1abc9c;
 
 .countdown {
   position: absolute;
@@ -23,26 +25,88 @@ $--color-black: #111;
   color: rgba(white, 0);
   z-index: 5;
   font-family: 'Poppins';
-  &.animation {
-    animation: countAnim 1s ease-in-out;
-  }
 }
 
 .game {
   @include parallax-bg('../assets/img/game-bg.jpg');
-  &__bg-dark {
-    overflow: hidden;
-    flex-direction: column;
+  @include flex-center-block;
+  @media (max-width: 792px) {
+    padding: 15px;
+  }
+  &__popup {
+    position: fixed;
+    background: #fff;
+    min-width: 200px;
+    min-height: 400px;
+    width: 50%;
+    height: auto;
+    box-shadow: 0 25px 50px rgba(black, 0.1), 0 0 0 1000px rgba(white, 0.95);
+    border-radius: 20px;
+    padding: 40px;
     @include flex-center-block;
+    flex-direction: column;
+    justify-content: start;
+    display: none;
+    z-index: 10;
+    @media (max-width: 792px) {
+      width: 96%;
+    }
+    &.active {
+      display: flex;
+    }
+    &--title {
+      font-size: 3.5rem;
+    }
+    &--score {
+      font-size: 1.5rem;
+    }
+    &--answer {
+      font-size: 1rem;
+      margin-top: 20px;
+      &.last {
+        margin-bottom: 40px;
+      }
+    }
+    &--btn {
+      background-color: transparent;
+      border: 2px solid $turquoise;
+      border-radius: 0.6em;
+      color: #fff;
+      cursor: pointer;
+      @include flex-center-block;
+      width: 20rem;
+      height: 3rem;
+      text-align: center;
+      line-height: 1;
+      margin: 0.4em;
+      text-transform: uppercase;
+      box-shadow: 0 0 40px 40px $turquoise inset, 0 0 0 0 $turquoise;
+      font: 700 1rem 'Montserrat', sans-serif;
+
+      transition: all 150ms ease-in-out;
+      &:hover,
+      &:focus {
+        color: $turquoise;
+        outline: 0;
+        box-shadow: 0 0 10px 0 $green inset, 0 0 10px 4px $green;
+      }
+    }
+  }
+  &__congratulations {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(black, 0.4);
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 20px;
+
+    z-index: 12;
+    display: none;
+    pointer-events: none;
+    &.active {
+      display: flex;
+    }
   }
+
   &::before {
     content: '';
     position: absolute;
@@ -82,13 +146,16 @@ $--color-black: #111;
     @include flex-center-block;
     flex-direction: column;
     justify-content: flex-start;
-    box-shadow: 0px 0px 10px 0px black;
+    box-shadow: 0px 0px 25px 25px rgba(black, 0.1),
+      0 0 0 1000px rgba(black, 0.3);
     transition: all 0.4s ease-in-out;
     @media (max-width: 792px) {
       width: 100%;
     }
     &:hover {
-      box-shadow: 0px 0px 25px 0px white;
+      // box-shadow: 0px 0px 25px 0px white;
+      box-shadow: 0px 0px 25px 0px rgba(white, 0.5),
+        0 0 0 1000px rgba(black, 0.3);
     }
 
     &__nameAndtimer {
@@ -201,9 +268,12 @@ $--color-black: #111;
       font-size: 6rem;
       margin-top: 40px;
       text-align: center;
-      &.animation {
-        animation: task 1s ease-in-out;
+      &.animationIn {
+        animation: taskIn 1s ease-in-out;
       }
+      // &.animationOut {
+      //   animation: taskOut 1s linear;
+      // }
 
       &--numbers {
         font-family: 'Number';
@@ -245,26 +315,40 @@ $--color-black: #111;
       }
     }
     &__score {
-      margin-top: 80px;
+      margin-top: 5rem;
       margin-bottom: 20px;
       font-size: 1rem;
       & > span {
+        color: #009b77;
         margin-left: 10px;
+        position: relative;
+        font-size: 1rem;
+        &.inсorrect {
+          animation: incorrect 1s ease-in-out;
+          color: red;
+        }
+      }
+      & .scoreCounter {
+        font-size: 1.2rem;
+        color: #009b77;
+        position: absolute;
+        margin-left: 10px;
+        margin-top: -3px;
+        opacity: 0;
+        &.correct {
+          color: #009b77;
+        }
+        &.incorrect {
+          color: #dc143c;
+        }
+        &.animation {
+          animation: scoreCount 1.5s ease-in-out;
+        }
       }
     }
   }
 }
 
-@keyframes countAnim {
-  from {
-    opacity: 1;
-    color: rgba(white, 0.7);
-  }
-  to {
-    opacity: 0;
-    color: rgba(white, 0.2);
-  }
-}
 @keyframes blocks {
   0%,
   100% {
@@ -274,7 +358,7 @@ $--color-black: #111;
     transform: translateY(-20px);
   }
 }
-@keyframes task {
+@keyframes taskIn {
   from {
     opacity: 0.1;
     transform: translateX(100px);
@@ -284,12 +368,37 @@ $--color-black: #111;
     transform: translateX(0);
   }
 }
-
-@keyframes wave {
-  0% {
-    background-position-x: 0;
+@keyframes taskOut {
+  from {
+    opacity: 1;
+    transform: translateX(0);
   }
+  to {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+}
+@keyframes incorrect {
+  0%,
   100% {
-    background-position-x: 118px;
+    color: #dc143c;
+    text-shadow: #dc143c 0px 0px 5px;
+    left: 0px;
+  }
+  50% {
+    color: red;
+    text-shadow: red 0px 0px 5px;
+    left: 2px;
+  }
+}
+
+@keyframes scoreCount {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-10px);
+    opacity: 0;
   }
 }
