--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,10 @@
+@import 'https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/unicons.css';
 @import '_fonts.scss';
 @import 'mixins.scss';
 @import 'command.scss';
 @import 'start.scss';
 @import 'attack.scss';
+@import 'leaderboard.scss';
 
 * {
   margin: 0;
