--- a/src/styles/attack.scss
+++ b/src/styles/attack.scss
@@ -35,12 +35,12 @@ $turquoise: #1abc9c;
   }
   &__popup {
     position: fixed;
-    background: #fff;
+    background: rgb(200, 200, 200);
     min-width: 200px;
     min-height: 400px;
     width: 50%;
     height: auto;
-    box-shadow: 0 25px 50px rgba(black, 0.1), 0 0 0 1000px rgba(white, 0.95);
+    box-shadow: 0 25px 50px rgba(black, 0.1), 0 0 0 1000px rgba(black, 0.45);
     border-radius: 20px;
     padding: 40px;
     @include flex-center-block;
@@ -168,6 +168,9 @@ $turquoise: #1abc9c;
       @media (max-width: 792px) {
         justify-content: center;
       }
+    }
+    &__name {
+      margin-bottom: 3rem;
     }
     //  *** start timer styles ***
     &__timer {
@@ -361,7 +364,7 @@ $turquoise: #1abc9c;
 @keyframes taskIn {
   from {
     opacity: 0.1;
-    transform: translateX(100px);
+    transform: translateX(40px);
   }
   to {
     opacity: 1;
@@ -375,7 +378,7 @@ $turquoise: #1abc9c;
   }
   to {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-40px);
   }
 }
 @keyframes incorrect {
