--- a/src/styles/leaderboard.scss
+++ b/src/styles/leaderboard.scss
@@ -1,3 +1,4 @@
+$--clr: #1e9bff;
 .leaderboard {
   background-color: #111;
   position: relative;
@@ -24,13 +25,14 @@
     min-width: 200px;
     min-height: 400px;
     width: 50%;
+    height: 30rem;
     text-align: center;
-
     line-height: 48px;
     background: black;
     font-size: 20px;
     letter-spacing: 4px;
     border-radius: 20px;
+    @include flex-center-block;
 
     &::before,
     &::after {
@@ -78,160 +80,94 @@
       padding: 20px 0;
       border-radius: 20px;
     }
+    &__mode {
+    }
   }
-  &__mode {
-    margin-top: 20px;
+  &__list {
+    width: 50%;
+    height: 250px;
+    // background: rgba(white, 0.2);
+    overflow: overlay;
+    margin: 0 auto;
+    /* custom scrollbar */
+    &::-webkit-scrollbar {
+      background-color: transparent;
+      width: 20px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #a8bbbf;
+      border-radius: 20px;
+      border: 6px solid transparent;
+      background-clip: content-box;
+    }
+  }
+  &__btn {
     position: relative;
-    @include flex-center-block;
-    flex-direction: column;
-    [type='checkbox']:checked,
-    [type='checkbox']:not(:checked) {
-      display: none;
-      pointer-events: none;
+    background: #444;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    letter-spacing: 0.1em;
+    padding: 10px 30px;
+    transition: 0.5s;
+    background: $--clr;
+    box-shadow: 0 0 35px $--clr;
+    top: 30px;
+    &:hover {
+      letter-spacing: 0.25em;
     }
 
-    .dropdown:checked + label,
-    .dropdown:not(:checked) + label {
-      position: relative;
-      font: 500 15px 'Roboto', sans-serif;
-      line-height: 2;
-      height: 50px;
-      transition: all 200ms linear;
-      border-radius: 4px;
-      width: 220px;
-      letter-spacing: 1px;
-      display: -webkit-inline-flex;
-      display: -ms-inline-flexbox;
-      display: inline-flex;
-      -webkit-align-items: center;
-      -moz-align-items: center;
-      -ms-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      -moz-justify-content: center;
-      -ms-justify-content: center;
-      justify-content: center;
-      -ms-flex-pack: center;
-      text-align: center;
-      border: none;
-      background-color: rgba(white, 0.8);
-      cursor: pointer;
-      color: black;
-      box-shadow: 0 12px 35px 0 rgba(255, 235, 167, 0.15);
-    }
-
-    .dropdown:checked + label:before,
-    .dropdown:not(:checked) + label:before {
-      position: fixed;
-      top: 0;
-      left: 0;
+    &::before {
       content: '';
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      cursor: auto;
-      pointer-events: none;
-    }
-    .dropdown:checked + label:before {
-      pointer-events: auto;
-    }
-    .dropdown:not(:checked) + label .uil {
-      font-size: 24px;
-      margin-left: 10px;
-      transition: transform 200ms linear;
-    }
-    .dropdown:checked + label .uil {
-      transform: rotate(180deg);
-      font-size: 24px;
-      margin-left: 10px;
-      transition: transform 200ms linear;
-    }
-    .section-dropdown {
-      padding: 5px;
-      background-color: #898989;
-      align-self: center;
-      width: 20%;
-      border-radius: 4px;
-      display: block;
-      box-shadow: 0 14px 35px 0 rgba(9, 9, 12, 0.4);
-      z-index: 2;
-      opacity: 0;
-      pointer-events: none;
-      transform: translateY(20px);
-      transition: all 200ms linear;
-    }
-    .dark-light:checked ~ .sec-center .section-dropdown {
-      background-color: #fff;
-      box-shadow: 0 14px 35px 0 rgba(9, 9, 12, 0.15);
-    }
-    .dropdown:checked ~ .section-dropdown {
-      opacity: 1;
-      pointer-events: auto;
-      transform: translateY(0);
-    }
-    .section-dropdown:before {
       position: absolute;
-      top: -20px;
-      left: 0;
-      width: 100%;
-      height: 20px;
-      content: '';
-      display: block;
+      inset: 2px;
+      background: #27282c;
+    }
+    & > a {
+      position: relative;
       z-index: 1;
+      color: $--clr;
     }
-    .section-dropdown:after {
+    & > b {
       position: absolute;
-      top: -7px;
-      left: 30px;
-      width: 0;
-      height: 0;
-      border-left: 8px solid transparent;
-      border-right: 8px solid transparent;
-      border-bottom: 8px solid #898989;
-      content: '';
+      inset: 0;
       display: block;
-      z-index: 2;
-      transition: all 200ms linear;
+      &::before {
+        content: '';
+        position: absolute;
+        top: -3.5px;
+        left: 80%;
+        height: 4px;
+        width: 15px;
+        border: 2px solid $--clr;
+        background-color: #27282c;
+        transform: translateX(-50%);
+        transition: 0.5s;
+      }
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: -3.5px;
+        left: 20%;
+        height: 4px;
+        width: 15px;
+        border: 2px solid $--clr;
+        background-color: #27282c;
+        transform: translateX(-50%);
+        transition: 0.5s;
+      }
     }
-
-    a {
-      position: relative;
-      color: black;
-      transition: all 200ms linear;
-      font-family: 'Roboto', sans-serif;
-      font-weight: 500;
-      font-size: 15px;
-      border-radius: 2px;
-      padding: 5px 0;
-      padding-left: 20px;
-      padding-right: 15px;
-      margin: 2px 0;
-      text-align: left;
-      @include flex-center-block;
-      justify-content: space-between;
-      -ms-flex-pack: distribute;
+    &:hover b::before {
+      width: 25px;
+      left: 20%;
     }
-
-    a:hover {
-      background-color: rgba(white, 0.5);
-    }
-
-    .section-dropdown-sub {
-      position: relative;
-      display: block;
-      width: 100%;
-      pointer-events: none;
-      opacity: 0;
-      max-height: 0;
-      padding-left: 10px;
-      padding-right: 3px;
-      overflow: hidden;
-      transition: all 200ms linear;
-    }
-    .dropdown-sub:checked ~ .section-dropdown-sub {
-      pointer-events: auto;
-      opacity: 1;
-      max-height: 999px;
+    &:hover b::after {
+      width: 22px;
+      left: 80%;
     }
   }
 }
