--- a/src/styles/leaderboard.scss
+++ b/src/styles/leaderboard.scss
@@ -16,24 +16,58 @@ $--clr: #1e9bff;
     height: 100%;
     object-fit: cover;
   }
-  & h1 {
-    z-index: 2;
-  }
 
   &__container {
     position: relative;
     min-width: 200px;
     min-height: 400px;
     width: 50%;
-    height: 30rem;
+    height: 32rem;
     text-align: center;
     line-height: 48px;
     background: black;
-    font-size: 20px;
     letter-spacing: 4px;
     border-radius: 20px;
     @include flex-center-block;
-
+    &--title {
+      font-size: 2.5rem;
+      z-index: 2;
+    }
+    @media (max-width: 1400px) {
+      & {
+        height: 35rem;
+      }
+    }
+    @media (max-width: 1200px) {
+      & {
+        height: 40rem;
+      }
+    }
+    @media (max-width: 850px) {
+      & {
+        height: 45rem;
+      }
+      &--title {
+        font-size: 2rem;
+      }
+    }
+    @media (max-width: 600px) {
+      & {
+        width: 70%;
+        height: 50rem;
+      }
+      &--title {
+        font-size: 1.7rem;
+      }
+    }
+    @media (max-width: 400px) {
+      & {
+        width: 80%;
+      }
+      &--title {
+        font-size: 1.7rem;
+      }
+    }
     &::before,
     &::after {
       content: '';
@@ -68,6 +102,8 @@ $--clr: #1e9bff;
     &--glass {
       position: absolute;
       display: block;
+      @include flex-center-block;
+
       top: 1px;
       left: 1px;
       right: 1px;
@@ -86,7 +122,7 @@ $--clr: #1e9bff;
   &__list {
     width: 50%;
     height: 250px;
-    // background: rgba(white, 0.2);
+    font-size: 1.3rem;
     overflow: overlay;
     margin: 0 auto;
     /* custom scrollbar */
@@ -110,7 +146,6 @@ $--clr: #1e9bff;
     position: relative;
     background: #444;
     text-transform: uppercase;
-    font-size: 1.5em;
     letter-spacing: 0.1em;
     padding: 10px 30px;
     transition: 0.5s;
@@ -131,6 +166,7 @@ $--clr: #1e9bff;
       position: relative;
       z-index: 1;
       color: $--clr;
+      font-size: 1.5em;
     }
     & > b {
       position: absolute;
