--- a/src/styles/leaderboard.scss
+++ b/src/styles/leaderboard.scss
@@ -116,19 +116,72 @@ $--clr: #1e9bff;
       padding: 20px 0;
       border-radius: 20px;
     }
-    &__mode {
+    &--content {
+      width: 100%;
     }
   }
+  &__mode {
+    // background-color: red;
+    margin-top: 10px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    &--label {
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+    }
+    & > select {
+      padding: 5px;
+      background-color: rgba(white, 0.2);
+      color: white;
+      font-size: 0.8rem;
+
+      &:focus,
+      &:hover {
+        outline: none;
+      }
+    }
+    & option {
+      color: black;
+    }
+  }
+
+  &__head {
+    width: 80%;
+    margin: 20px auto;
+    font-size: 1.3rem;
+    @include flex-center-block;
+    justify-content: space-between;
+    border-bottom: 1px solid white;
+    color: white;
+  }
   &__list {
-    width: 50%;
+    transition: all 0.5s ease-in-out;
+    width: 80%;
     height: 250px;
     font-size: 1.3rem;
     overflow: overlay;
     margin: 0 auto;
+    padding: 0 20px 0 0;
+    color: white;
+
+    & > :nth-child(even) {
+      background-color: #ffffffac;
+      color: #1d1d1d;
+    }
+
+    &--item {
+      padding: 0 20px;
+
+      @include flex-center-block;
+      justify-content: space-between;
+    }
+
     /* custom scrollbar */
     &::-webkit-scrollbar {
       background-color: transparent;
-      width: 20px;
+      width: 1.1rem;
     }
 
     &::-webkit-scrollbar-track {
