--- a/src/styles/start.scss
+++ b/src/styles/start.scss
@@ -29,6 +29,10 @@ $gray: #9b9b9b;
     @media (max-width: 320px) {
       margin-bottom: -10px;
     }
+    @media (max-width: 440px) {
+      margin-bottom: 10px;
+      font-size: 2rem;
+    }
   }
   &__name--input {
     font-family: inherit;
