--- a/src/styles/start.scss
+++ b/src/styles/start.scss
@@ -7,12 +7,60 @@ $gray: #9b9b9b;
   text-align: center;
   @include parallax-bg('../assets/img/start-bg.jpg');
   @include flex-center-block;
-
+  position: relative;
+  &__rulesBlock {
+    &--close {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font: 700 1.2rem 'Arial';
+      cursor: pointer;
+    }
+    & > h1 {
+      text-align: center;
+    }
+    & li {
+      font: 700 1.2rem 'Arial';
+      margin-top: 10px;
+    }
+    transition: 0.5s;
+    min-width: 200px;
+    position: absolute;
+    padding: 20px 40px;
+    height: 95%;
+    background-color: #f8002f;
+    background-image: linear-gradient(180deg, #f8002f 0%, #000c14 74%);
+    text-align: left;
+    border-radius: 20px;
+    top: 50%;
+    z-index: 12;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    box-shadow: 0px 0px 25px 25px rgba(white, 0.1),
+      0 0 0 1000px rgba(black, 0.3);
+    transition: all 0.4s ease-in-out;
+    &:hover {
+      box-shadow: 0px 0px 25px 0px rgba(white, 0.5),
+        0 0 0 1000px rgba(black, 0.3);
+    }
+    &--list {
+      margin-top: 50px;
+    }
+    opacity: 0;
+    z-index: -2;
+    &.active {
+      opacity: 1;
+      z-index: 12;
+      transition: 0.5s;
+    }
+  }
   &__form {
     min-width: 200px;
-    padding: 30px;
+    padding: 20px 30px;
     background-color: rgba(black, 0.5);
     border-radius: 20px;
+
     @include flex-center-block;
     flex-direction: column;
     box-shadow: 0px 0px 10px 0px white;
