--- a/src/styles/start.scss
+++ b/src/styles/start.scss
@@ -23,11 +23,9 @@ $gray: #9b9b9b;
       font: 700 1.2rem 'Arial';
       margin-top: 10px;
     }
-    transition: 0.5s;
     min-width: 200px;
     position: absolute;
     padding: 20px 40px;
-    height: 95%;
     background-color: #f8002f;
     background-image: linear-gradient(180deg, #f8002f 0%, #000c14 74%);
     text-align: left;
@@ -52,7 +50,7 @@ $gray: #9b9b9b;
     &.active {
       opacity: 1;
       z-index: 12;
-      transition: 0.5s;
+      transition: all 0.4s ease-in-out;
     }
   }
   &__form {
